<resources>
    <string name="app_name">Food App</string>
    <string name="app_title">Zakora Food</string>
    <string name="welcome_to_zakora_food">Welcome to Zakora Food</string>
    <string name="desc_get_started">Order the best meals in Zakora Food and have them delivered to your doorstep in little or no time. Doesn\'t that sound delicious?</string>
    <string name="signup">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="zakora">Zakora</string>
    <string name="food">Food</string>
    <string name="sign_up_with_space">Sign Up</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_sign_up_with">or Sign Up with</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="welcome">Welcome</string>
    <string name="desc_home">Home made meals prepared with love. Richest ingredients</string>
    <string name="search_menu">Search Menu</string>
    <string name="_4_9">4.9</string>
    <string name="_355_ratings_starts_at">(355 ratings) - Starts at</string>
    <string name="_50_000_idr">50.000 IDR</string>
    <string name="paket_kfc_ayam_bucket">Paket KFC Ayam Bucket</string>
    <string name="title_kfc_product">title_kfc_product</string>
    <string name="icon_menu">icon_menu</string>
    <string name="icon_shop">icon_shop</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_sign_in_with">Or Sign in With</string>
    <string name="social_media">social_media</string>
    <string name="_4_5">4.5</string>
    <string name="description">Description</string>
    <string name="our_fried_rice_is_made_from_the_finest_ingredients_and_veggies_every_single_dish_is_made_with_fresh_vegetables_each_plate_is_served_with_our_signature_chicken_and_a_free">Our fried rice is made from the finest ingredients and veggies. Every single dish is made with fresh vegetables. Each plate is served with our signature chicken and a free</string>
    <string name="ingredients">Ingredients</string>
    <string name="additions">Additions</string>
    <string name="ayam_bucket">Ayam Bucket</string>
    <string name="back_from_detail_product_page">back from detail product page</string>
    <string name="buy">Buy</string>
    <string name="your_email_or_password_is_wrong">Your email or password is wrong</string>
</resources>