<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center_horizontal"
    android:paddingVertical="20dp"
    android:paddingHorizontal="40dp"
    android:backgroundTint="@color/backgroundColor"
    android:background="@drawable/sign_up_button_shape"
    android:layout_height="match_parent">

    <View
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_shape"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_with_space"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/primaryColor"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:id="@+id/edt_email_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/white"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="14sp"
        android:layout_marginBottom="30dp"
        android:padding="15dp"/>
    <EditText
        android:id="@+id/edt_user_name_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/white"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="14sp"
        android:layout_marginBottom="30dp"
        android:padding="15dp"/>
    <EditText
        android:id="@+id/edt_pass_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/white"
        android:hint="@string/password"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="14sp"
        android:padding="15dp"/>
    <EditText
        android:id="@+id/edt_confirm_pass_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/white"
        android:hint="@string/confirm_password"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="14sp"
        android:padding="15dp"
         />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/button_shape"
        android:text="@string/sign_up_with_space"
        android:textStyle="bold"
        android:textSize="14sp"
        android:fontFamily="@font/poppinsmedium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_up_with"
        android:textColor="@color/grey"
        android:layout_marginVertical="20dp"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/social_media"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/social_media"
        android:layout_marginBottom="20dp"/>


</LinearLayout>