<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailProductActivity"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/kfc_potrait"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           android:orientation="horizontal"
           android:layout_marginVertical="30dp"
           android:layout_marginHorizontal="20dp">
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
               android:clickable="true"
               android:contentDescription="@string/back_from_detail_product_page"/>

           <View
               android:layout_width="0dp"
               android:layout_height="0dp"
               android:layout_weight="1" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/ayam_bucket"
               android:paddingVertical="10dp"
               android:paddingHorizontal="20dp"
               android:textColor="@color/white"
               android:textSize="16sp"
               android:textStyle="bold"
               android:fontFamily="@font/poppinsmedium"
               android:background="@drawable/product_detail_name"
               android:layout_marginEnd="30dp"
               />
       </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/product_detail_shape"
        android:backgroundTint="@color/white"
        android:padding="35dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="18sp"
                    android:textColor="@color/grey"
                    android:fontFamily="@font/poppinsmedium"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/our_fried_rice_is_made_from_the_finest_ingredients_and_veggies_every_single_dish_is_made_with_fresh_vegetables_each_plate_is_served_with_our_signature_chicken_and_a_free"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/ingredients"
                    android:textSize="18sp"
                    android:textColor="@color/grey"
                    android:fontFamily="@font/poppinsmedium"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ingredients"
                    android:layout_marginVertical="10dp"
                    android:contentDescription="@string/ingredients"/>
            </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="35dp"
        android:text="@string/buy"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="380dp"
        android:layout_marginStart="40dp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_5"
            android:textSize="18sp"
            android:fontFamily="@font/poppinsmedium"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_star_24"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>