<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_login"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zakora"
                android:textSize="40sp"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="60dp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:textSize="40sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/primaryColor"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="60dp"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/white"
            android:hint="@string/email"
            android:paddingVertical="15dp"
            android:paddingHorizontal="30dp"
            android:layout_marginVertical="40dp"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:textSize="14sp"
            />
        <EditText
            android:id="@+id/edt_pass_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/white"
            android:hint="@string/password"
            android:paddingVertical="15dp"
            android:paddingHorizontal="30dp"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:textSize="14sp"
            />
       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/button_shape"
           android:text="@string/login"
           android:textColor="@color/white"
           android:textSize="14sp"
           android:fontFamily="@font/poppinsmedium"
           android:layout_marginHorizontal="30dp"
           android:layout_marginTop="50dp"
           android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_btn_to_show_sign_up"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/sign_up_button_shape"
        android:clickable="true"
        >

        <ImageView
            android:id="@+id/iv_icon_arrow_up_login"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_baseline_keyboard_arrow_up_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_below="@+id/iv_icon_arrow_up_login"
            android:text="@string/signup"
            android:layout_marginBottom="5dp"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>