<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background_get_started"
    android:padding="30dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:fontFamily="@font/poppinsmedium"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp" />
    
    <View
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_zakora_food"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_get_started"
            android:fontFamily="@font/poppinsregular"
            android:textSize="12sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"/>
    
    <ImageButton
        android:id="@+id/btn_get_started"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:paddingVertical="8dp"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        android:background="@drawable/button_shape"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/welcome_to_zakora_food" />

</LinearLayout>