<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        tools:context=".HomeActivity">

        <LinearLayout
            android:id="@+id/ly_header_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ib_menu_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryColor"
                    android:clickable="true"
                    android:contentDescription="@string/icon_menu"
                    android:src="@drawable/ic_baseline_menu_24" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/ib_shop_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@color/primaryColor"
                    android:contentDescription="@string/icon_shop"
                    android:src="@drawable/ic_baseline_shopping_cart_24" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/desc_home"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"
                android:orientation="horizontal"
                android:paddingHorizontal="50dp"
                android:paddingVertical="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/search_menu"
                    android:src="@drawable/ic_baseline_search_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_menu"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ly_header_home"
            android:background="@drawable/sign_up_button_shape"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            android:paddingVertical="30dp">

            <include layout="@layout/home_fragment" />

            <include layout="@layout/home_fragment" />

            <include layout="@layout/home_fragment" />

            <include layout="@layout/home_fragment" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>

